ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-ingress
  namespace: sock-shop
  annotations: null
spec:
  ingressClassName: nginx
  rules:
    - host: www.wisdomgoddy.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-end
                port:
                  number: 80
